--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "css/main.css">
-    <title>Bella</title>
+    <title>Bella and Bellaing</title>
     <script src="https://kit.fontawesome.com/189dfeed8b.js" crossorigin="anonymous"></script>
 </head>
 
@@ -60,7 +60,7 @@
                     <li class="indent rest">Usually, but not always, done by goldens</li>
                     <li class="indent rest">Big upside-down smile on the good boy's/girl's face</li>
                 </ul>
-                <video src="e-sorcerer/github.io/MarkusMestari-Front-end-course/project/dist/assets/bella-original.mp4" id="video" controls></video>
+                <video src="../dist/assets/bella-original.mp4" id="video" controls></video>
             </div>
             <i class="fa-solid fa-chevron-down down-button"></i>
         </div>
