--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li class="indent rest">Usually, but not always, done by goldens</li>
                     <li class="indent rest">Big upside-down smile on the good boy's/girl's face</li>
                 </ul>
-                <video src="..Project/dist/assets/bella-original.mp4" id="video" controls></video>
+                <video src="assets/bella-original.mp4" id="video" controls></video>
             </div>
             <i class="fa-solid fa-chevron-down down-button"></i>
         </div>
