--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
             <h1>Some more examples of Bellas</h1>
                 <div class="pics">
                     <div class="image-container small">
-                        <img class="gallery-image" src="./E-Sorcerer/MarkusMestari-Front-end-course/project/dist/assets/bella-image1.jpg">
+                        <img class="gallery-image" src="assets/bella-image1.jpg">
                     </div>
                     <div class="image-container">
-                        <img class="gallery-image" src="E-Sorcerer/MarkusMestari-Front-end-course/project/dist/assets/bella-image2.png">
+                        <img class="gallery-image" src="assets/bella-image2.png">
                     </div>
                     <div class="image-container">
-                        <img class="gallery-image" src="./e-sorcerer/markusmestari-front-end-course/project/dist/assets/bella-image3.png">
+                        <img class="gallery-image" src="/assets/bella-image3.png">
                     </div>
                     <div class="image-container">
-                        <img class="gallery-image" src="e-sorcerer.github.io/MarkusMestari-Front-end-course-repo/project/dist/assets/bella-image4.png">
+                        <img class="gallery-image" src="assets/bella-image4.png">
                     </div>
                     <div class="image-container small">
-                        <img class="gallery-image" src="./e-sorcerer.github.io/MarkusMestari-Front-end-course-repo/project/dist/assets/bella-image5.png">
+                        <img class="gallery-image" src="assets/bella-image5.png">
                     </div>
                     
                 </div>
