--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "css/main.css">
-    <title>Bella test</title>
+    <title>Bella</title>
     <script src="https://kit.fontawesome.com/189dfeed8b.js" crossorigin="anonymous"></script>
 </head>
 
